--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,5 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - run: pnpm lint
       - run: pnpm typecheck
-      - run: pnpm test -- --run --passWithNoTests
+      - run: pnpm test:ci
       - run: pnpm size # fails if bundle > 80 kB gz
