feat(scaffold): web app in react ts vite

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,1 +1,9 @@
-{ "extends": "../../config/tsconfig.web.json", "references": [] }
+{
+  "extends": "../../config/tsconfig.web.json",
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "allowImportingTsExtensions": true,
+    "noEmit": true
+  },
+  "include": ["src"]
+}
