--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "private": true,
   "scripts": {
     "dev": "pnpm -r run dev",
+    "dev:web": "pnpm --filter @korobeinix/web dev",
     "lint": "eslint \"{apps,packages}/**/*.{ts,tsx,js,jsx}\" --no-error-on-unmatched-pattern",
+    "prepare": "husky",
     "size": "node scripts/size-limit.mjs",
     "test": "vitest",
     "test:ci": "vitest --run --passWithNoTests",
-    "typecheck": "pnpm -r exec tsc --noEmit",
-    "prepare": "husky"
+    "typecheck": "pnpm -r exec tsc --noEmit"
   },
   "keywords": [],
   "author": "LeDevNovice",
@@ -40,6 +41,12 @@
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
