feat(scaffold): api fastify

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,1 +1,5 @@
-{ "extends": "../../config/tsconfig.api.json", "references": [] }
+{
+  "extends": "../../config/tsconfig.api.json",
+  "compilerOptions": { "allowImportingTsExtensions": true, "noEmit": true },
+  "include": ["src"]
+}
